--- a/3rdparty/CEGUI/CMakeLists.txt
+++ b/3rdparty/CEGUI/CMakeLists.txt
@@ -30,7 +30,7 @@ function(build_CEGUI_dependency _NAME _SOURCE_PATH)
 		set(GENERATOR_PLATFORM_OPTION "-A x64")
 	endif()
     execute_process(
-        COMMAND ${CMAKE_COMMAND} ${CMAKE_CURRENT_SOURCE_DIR}/${_SOURCE_PATH} -G "${CMAKE_GENERATOR}" ${GENERATOR_PLATFORM_OPTION} -DCMAKE_INSTALL_PREFIX=${CEGUI_DEPS_INSTALL_PATH} -DCMAKE_DEBUG_POSTFIX="_d" ${ARGN}
+        COMMAND ${CMAKE_COMMAND} ${CMAKE_CURRENT_SOURCE_DIR}/${_SOURCE_PATH} -G "${CMAKE_GENERATOR}" ${GENERATOR_PLATFORM_OPTION} -DCMAKE_INSTALL_PREFIX=${CEGUI_DEPS_INSTALL_PATH} ${ARGN}
         WORKING_DIRECTORY ${CEGUI_DEPS_BUILD_PATH}/${_NAME}
     )
     execute_process(
