--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -41,14 +41,14 @@ if (IRR_BUILD_BULLET)
     )
 endif()
 
-if (IRR_BUILD_MITSUBA_LOADER)
-    add_subdirectory(MitsubaLoader)
-    set(IRR_EXT_MITSUBA_LOADER_INCLUDE_DIRS
-        ${IRR_EXT_MITSUBA_LOADER_INCLUDE_DIRS}
-        PARENT_SCOPE
-    )
-    set(IRR_EXT_MITSUBA_LOADER_LIB
-        ${IRR_EXT_MITSUBA_LOADER_LIB}
-        PARENT_SCOPE
-    )
-endif()
+#if (IRR_BUILD_MITSUBA_LOADER)
+#    add_subdirectory(MitsubaLoader)
+#    set(IRR_EXT_MITSUBA_LOADER_INCLUDE_DIRS
+#        ${IRR_EXT_MITSUBA_LOADER_INCLUDE_DIRS}
+#        PARENT_SCOPE
+#    )
+#    set(IRR_EXT_MITSUBA_LOADER_LIB
+#        ${IRR_EXT_MITSUBA_LOADER_LIB}
+#        PARENT_SCOPE
+#    )
+#endif()
