Resolved merge conflict

--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -109,6 +109,7 @@ set(IRRLICHT_SRCS_COMMON
 # Animators
 	CSceneNodeAnimatorCameraFPS.cpp
 	CSceneNodeAnimatorCameraMaya.cpp
+	CSceneNodeAnimatorCameraModifiedMaya.cpp
 	CSceneNodeAnimatorDelete.cpp
 	CSceneNodeAnimatorFlyCircle.cpp
 	CSceneNodeAnimatorFlyStraight.cpp
@@ -146,6 +147,7 @@ set(IRRLICHT_SRCS_COMMON
 	CVideoModeList.cpp
 	${CMAKE_SOURCE_DIR}/src/irr/video/GPUMemoryAllocatorBase.cpp
 	${CMAKE_SOURCE_DIR}/src/irr/video/SimpleGPUBufferAllocator.cpp
+	${CMAKE_SOURCE_DIR}/src/irr/video/CDerivativeMapCreator.cpp
 
 # Software renderer
 	CBurningShader_Raster_Reference.cpp
