--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 *.objs*
 *.d
 *.o
+# visual studio debug files
+*.ilk
+*.pdb
+*_d.exe
 # CEGUI's downloaded dependencies on Windows
 3rdparty/CEGUI/cegui-deps-0.8.x-src.zip
 # usually where people build
