--- a/ext/MitsubaLoader/CMakeLists.txt
+++ b/ext/MitsubaLoader/CMakeLists.txt
@@ -1,23 +1,48 @@
 include(../../cmake/common.cmake)
-#update_git_submodule(./stb)
 
 
 set(IRR_EXT_MITSUBA_LOADER_H
-	test.h
+	CElementEmitter.h
+	CElementFactory.h
+	CElementFilm.h
+	CElementSampler.h
+	CElementSensor.h
+	CElementTransform.h
+	CMitsubaLoader.h
+	CMitsubaScene.h
+	CShapeCreator.h
+	IElement.h
+	ParserUtil.h
+	PropertyElement.h
+	Shape.h
 )
 
 set(IRR_EXT_MITSUBA_LOADER_SRC
-	test.cpp
+	CElementEmitter.cpp
+	CElementFactory.cpp
+	CElementFilm.cpp
+	CElementSampler.cpp
+	CElementSensor.cpp
+	CElementTransform.cpp
+	CMitsubaLoader.cpp
+	CMitsubaScene.cpp
+	CShapeCreator.cpp
+	ParserUtil.cpp
+	PropertyElement.cpp
+	Shape.cpp
 )
 
-set(IRR_EXT_CEGUI_EXTERNAL_INCLUDE
-  "${MITSUBA_LOADER_INCLUDE_PATH}"
-)
+#set(IRR_EXT_MITSUBA_LOADER_EXTERNAL_INCLUDE
+#	"${IRR_ROOT_PATH}/3rdparty"
+#)
 
 irr_create_ext_library_project(
-  MITSUBA_LOADER
-  "${IRR_EXT_MITSUBA_LOADER_H}"
-  "${IRR_EXT_MITSUBA_LOADER_SRC}"
-  "${IRR_EXT_MITSUBA_LOADER_EXTERNAL_INCLUDE}"
-  ""
+	MitsubaLoader
+	"${IRR_EXT_MITSUBA_LOADER_H}"
+	"${IRR_EXT_MITSUBA_LOADER_SRC}"
+	""
+#	"${IRR_EXT_MITSUBA_LOADER_EXTERNAL_INCLUDE}"
+	""
 )
+
+#add_dependencies(IrrExtMitsubaLoader xxxxx)
