--- a/ext/MitsubaLoader/CMakeLists.txt
+++ b/ext/MitsubaLoader/CMakeLists.txt
@@ -32,17 +32,19 @@ set(IRR_EXT_MITSUBA_LOADER_SRC
 	Shape.cpp
 )
 
-#set(IRR_EXT_MITSUBA_LOADER_EXTERNAL_INCLUDE
-#	"${IRR_ROOT_PATH}/3rdparty"
-#)
+set(IRR_EXT_MITSUBA_LOADER_EXTERNAL_INCLUDE
+	"${IRR_ROOT_PATH}/3rdparty/libexpat"
+)
 
 irr_create_ext_library_project(
-	MitsubaLoader
+	MITSUBA_LOADER
 	"${IRR_EXT_MITSUBA_LOADER_H}"
 	"${IRR_EXT_MITSUBA_LOADER_SRC}"
-	""
-#	"${IRR_EXT_MITSUBA_LOADER_EXTERNAL_INCLUDE}"
+	"${IRR_EXT_MITSUBA_LOADER_EXTERNAL_INCLUDE}"
 	""
 )
 
-#add_dependencies(IrrExtMitsubaLoader xxxxx)
+add_compile_definitions(XML_STATIC)
+
+add_dependencies(IrrExtMITSUBA_LOADER ${MITSUBA_LOADER_DEPENDENTS})
+target_link_libraries(IrrExtMITSUBA_LOADER INTERFACE ${MITSUBA_LOADER_DEPENDENT_LIBS})
