Change CPLY to new API, without pure code refactor
I had to figure out what's going on there, but some changes are applied

--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -125,10 +125,10 @@ set(IRRLICHT_SRCS_COMMON
 	COpenGLDriver.cpp
 	COpenGLExtensionHandler.cpp
 	COpenGLFrameBuffer.cpp
-	COpenGLSLMaterialRenderer.cpp
+	#COpenGLSLMaterialRenderer.cpp
 	COpenGLTexture.cpp
 	${IRR_ROOT_PATH}/src/irr/video/COpenGLSpecializedShader.cpp
-	STextureSamplingParams.cpp
+	#STextureSamplingParams.cpp
 	FW_Mutex.cpp
 
 # Image processing
@@ -190,7 +190,7 @@ set(IRRLICHT_SRCS_NORMAL
 	COpenGLMultisampleTexture.cpp
 	COpenGLQuery.cpp
 	COpenGLTransformFeedback.cpp
-	COpenGLVAOSpec.cpp
+	#COpenGLVAOSpec.cpp
 	COpenGL1DTexture.cpp
 	COpenGL1DTextureArray.cpp
 	COpenGLCubemapArrayTexture.cpp
