--- a/.gitmodules
+++ b/.gitmodules
@@ -74,3 +74,7 @@
 	path = 3rdparty/CEGUI/glew
 	url = https://github.com/Perlmint/glew-cmake.git
 	branch = master
+[submodule "3rdparty/radeonrays"]
+	path = 3rdparty/radeonrays
+	url = https://github.com/devshgraphicsprogramming/RadeonRays_SDK.git
+	branch = baw
