--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -87,6 +87,8 @@ set(IRRLICHT_SRCS_COMMON
 	${IRR_ROOT_PATH}/src/irr/asset/IGLSLCompiler.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/ICPUShader.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/CShaderIntrospector.cpp
+	${IRR_ROOT_PATH}/src/irr/asset/CGLSLLoader.cpp
+	${IRR_ROOT_PATH}/src/irr/asset/CSPVLoader.cpp
 
 # Other mesh-related stuff
 	${IRR_ROOT_PATH}/src/irr/asset/bawformat/CBAWFile.cpp
