--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -51,7 +51,8 @@ set(BUILD_SHARED_LIBS ${_OLD_BUILD_SHARED_LIBS})
 get_target_property(ZLIB_BINARY_DIR zlibstatic "BINARY_DIR")
 get_target_property(ZLIB_NAME zlibstatic "NAME")
 get_target_property(ZLIB_DEBUG_POSTFIX zlibstatic "DEBUG_POSTFIX")
-set(ZLIB_INCLUDE_DIRS "${THIRD_PARTY_SOURCE_DIR}/zlib ${ZLIB_BINARY_DIR}")
+#message(FATAL_ERROR ${THIRD_PARTY_SOURCE_DIR})
+set(ZLIB_INCLUDE_DIR "${THIRD_PARTY_SOURCE_DIR}/zlib;${THIRD_PARTY_BINARY_DIR}/zlib")
 # This probably breaks the non-MSVC build in like 50 different ways
 set(ZLIB_LIBRARY_DEBUG "${ZLIB_BINARY_DIR}/Debug/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${ZLIB_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}")
 set(ZLIB_LIBRARY_RELEASE "${ZLIB_BINARY_DIR}/Release/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${ZLIB_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}")
