--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -52,10 +52,10 @@ get_target_property(ZLIB_BINARY_DIR zlibstatic "BINARY_DIR")
 get_target_property(ZLIB_NAME zlibstatic "NAME")
 get_target_property(ZLIB_DEBUG_POSTFIX zlibstatic "DEBUG_POSTFIX")
 #message(FATAL_ERROR ${THIRD_PARTY_SOURCE_DIR})
-set(ZLIB_INCLUDE_DIR "${THIRD_PARTY_SOURCE_DIR}/zlib;${THIRD_PARTY_BINARY_DIR}/zlib")
+set(ZLIB_INCLUDE_DIR "${THIRD_PARTY_SOURCE_DIR}/zlib;${THIRD_PARTY_BINARY_DIR}/zlib" CACHE STRING "" FORCE)
 # This probably breaks the non-MSVC build in like 50 different ways
-set(ZLIB_LIBRARY_DEBUG "${ZLIB_BINARY_DIR}/Debug/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${ZLIB_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}")
-set(ZLIB_LIBRARY_RELEASE "${ZLIB_BINARY_DIR}/Release/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${ZLIB_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}")
+set(ZLIB_LIBRARY_DEBUG "${ZLIB_BINARY_DIR}/Debug/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${ZLIB_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
+set(ZLIB_LIBRARY_RELEASE "${ZLIB_BINARY_DIR}/Release/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
 
 
 
@@ -104,9 +104,9 @@ set(_OLD_BUILD_TESTING ${BUILD_TESTING})
 set(BUILD_SHARED_LIBS OFF)
 set(BUILD_STATIC_LIBS OFF)
 set(BUILD_TESTING OFF)
-set(PYILMBASE_ENABLE OFF)
-set(OPENEXR_BUILD_UTILS OFF)
-set(OPENEXR_VIEWERS_ENABLE OFF)
+set(PYILMBASE_ENABLE OFF CACHE STRING "" FORCE)
+set(OPENEXR_BUILD_UTILS OFF CACHE STRING "" FORCE)
+set(OPENEXR_VIEWERS_ENABLE OFF CACHE STRING "" FORCE)
 add_subdirectory(openexr openexr EXCLUDE_FROM_ALL)
 set(BUILD_SHARED_LIBS ${_OLD_BUILD_SHARED_LIBS})
 set(BUILD_STATIC_LIBS ${_OLD_BUILD_STATIC_LIBS})
