--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -128,6 +128,9 @@ set(IRRLICHT_SRCS_COMMON
 	FW_Mutex.cpp
 
 # Image processing
+	${IRR_ROOT_PATH}/src/irr/asset/IImageLoader.cpp
+	${IRR_ROOT_PATH}/src/irr/asset/IImageWriter.cpp
+	${IRR_ROOT_PATH}/src/irr/asset/IImageAssetHandlerBase.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/CImageLoaderDDS.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/CImageLoaderJPG.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/CImageLoaderPNG.cpp
