--- a/include/irr/config/BuildConfigOptions.h.in
+++ b/include/irr/config/BuildConfigOptions.h.in
@@ -6,6 +6,9 @@
 // architecture
 #cmakedefine __IRR_COMPILE_WITH_ARM_SIMD_
 
+// libraries
+#cmakedefine _IRR_COMPILE_WITH_GLI_
+
 // OS
 #cmakedefine _IRR_PLATFORM_WINDOWS_
 #cmakedefine _IRR_PLATFORM_LINUX_
@@ -16,10 +19,25 @@
 #cmakedefine _IRR_COMPILE_WITH_VULKAN_
 
 // loaders
+#cmakedefine _IRR_COMPILE_WITH_OBJ_LOADER_
+#cmakedefine _IRR_COMPILE_WITH_STL_LOADER_
+#cmakedefine _IRR_COMPILE_WITH_PLY_LOADER_
+#cmakedefine _IRR_COMPILE_WITH_BAW_LOADER_
+#cmakedefine _IRR_COMPILE_WITH_JPG_LOADER_
+#cmakedefine _IRR_COMPILE_WITH_PNG_LOADER_
+#cmakedefine _IRR_COMPILE_WITH_TGA_LOADER_
 #cmakedefine _IRR_COMPILE_WITH_OPENEXR_LOADER_
+#cmakedefine _IRR_COMPILE_WITH_GLI_LOADER_
 
 // writers
+#cmakedefine _IRR_COMPILE_WITH_STL_WRITER_
+#cmakedefine _IRR_COMPILE_WITH_PLY_WRITER_
+#cmakedefine _IRR_COMPILE_WITH_BAW_WRITER_
+#cmakedefine _IRR_COMPILE_WITH_TGA_WRITER_
+#cmakedefine _IRR_COMPILE_WITH_JPG_WRITER_
+#cmakedefine _IRR_COMPILE_WITH_PNG_WRITER_
 #cmakedefine _IRR_COMPILE_WITH_OPENEXR_WRITER_
+#cmakedefine _IRR_COMPILE_WITH_GLI_WRITER_
 
 // extra config
 #cmakedefine __IRR_FAST_MATH
