Fork GLM and GLEW, specify tags

--- a/.gitmodules
+++ b/.gitmodules
@@ -63,7 +63,7 @@
 	branch = master
 [submodule "3rdparty/glm"]
 	path = 3rdparty/glm
-	url = https://github.com/g-truc/glm.git
+	url = https://github.com/AnastaZIuk/glm.git
 [submodule "3rdparty/freetype2"]
 	path = 3rdparty/freetype2
 	url = https://git.sv.nongnu.org/r/freetype/freetype2.git
@@ -72,4 +72,4 @@
 	url = https://github.com/svn2github/pcre.git
 [submodule "3rdparty/CEGUI/glew-cmake"]
 	path = 3rdparty/CEGUI/glew
-	url = https://github.com/achalpandeyy/glew-cmake.git
+	url = https://github.com/AnastaZIuk/glew-cmake.git
