Fix zlib on master
But png_static project doesn't have a path to configuration zconf.h files
It's weird, because path to it is placed in COMMON_INCLUDE_DIRS though,
and both Irrlicht and IrrlichtServer projects see it, but png_static doesn't

--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -202,6 +202,7 @@ set(IRRLICHT_SRCS_SERVER
 set(COMMON_INCLUDE_DIRS
 	${THIRD_PARTY_SOURCE_DIR}/convertutf
 	${THIRD_PARTY_SOURCE_DIR}/utfcpp/source
+	$<TARGET_PROPERTY:zlibstatic,BINARY_DIR> #for dynamically generated zconf.h
 	$<TARGET_PROPERTY:png_static,BINARY_DIR> #for dynamically generated pnglibconf.h
 	$<TARGET_PROPERTY:jpeg,BINARY_DIR> #for dynamically generated jconfig.h
 )
@@ -209,6 +210,13 @@ set(COMMON_INCLUDE_DIRS
 irr_adjust_flags() # macro defined in root CMakeLists
 irr_adjust_definitions() # macro defined in root CMakeLists
 
+macro(irr_target_link_zlib _trgt)
+	add_dependencies(${_trgt} zlibstatic)
+	target_link_libraries(${_trgt} INTERFACE
+		zlibstatic
+	)
+	target_include_directories(${_trgt} PUBLIC ${THIRD_PARTY_SOURCE_DIR}/zlib)
+endmacro()
 macro(irr_target_link_openssl _trgt)
 	if(WIN32)
 		target_link_libraries(${_trgt} INTERFACE
@@ -262,6 +270,7 @@ add_library(Irrlicht STATIC
 )
 
 add_dependencies(Irrlicht openssl_build)
+irr_target_link_zlib(Irrlicht)
 irr_target_link_openssl(Irrlicht)
 irr_target_link_shaderc(Irrlicht)
 irr_target_link_libjpeg(Irrlicht)
@@ -334,10 +343,10 @@ add_library(IrrlichtServer STATIC
 	$<TARGET_OBJECTS:convert_utf>
 	$<TARGET_OBJECTS:lz4>
 	$<TARGET_OBJECTS:lzma>
-	$<TARGET_OBJECTS:zlib>
 )
 
 add_dependencies(IrrlichtServer openssl_build)
+irr_target_link_zlib(IrrlichtServer)
 irr_target_link_openssl(IrrlichtServer)
 irr_target_link_shaderc(IrrlichtServer)
 irr_target_link_libjpeg(IrrlichtServer)
