more CUDA CMake

--- a/include/irr/config/BuildConfigOptions.h.in
+++ b/include/irr/config/BuildConfigOptions.h.in
@@ -13,8 +13,11 @@
 
 // graphics API backend
 #cmakedefine _IRR_COMPILE_WITH_OPENGL_
-#cmakedefine _IRR_COMPILE_WITH_OPENCL_
 #cmakedefine _IRR_COMPILE_WITH_VULKAN_
+
+// compute interop
+#cmakedefine _IRR_COMPILE_WITH_OPENCL_
+#cmakedefine _IRR_COMPILE_WITH_CUDA_
 
 // extra config
 #cmakedefine __IRR_FAST_MATH
