--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,17 +23,17 @@ project(Irrlicht LANGUAGES CXX C)
 # CUDA test
 include(CheckLanguage)
 check_language(CUDA)
-enable_language(CUDA)
-if(${CMAKE_CUDA_COMPILER_VERSION} VERSION_LESS 9.0)
-	message(STATUS "CUDA not found or version lower than 9.0 found, version 9.0+ needed for C++14 support.")
-else()
-	message(STATUS "CUDA version 9.0+ found, you can enable the IRR_COMPILE_WITH_CUDA option.")
-endif()
+#enable_language(CUDA)
+#if(${CMAKE_CUDA_COMPILER_VERSION} VERSION_LESS 9.0)
+#	message(STATUS "CUDA not found or version lower than 9.0 found, version 9.0+ needed for C++14 support.")
+#else()
+#	message(STATUS "CUDA version 9.0+ found, you can enable the IRR_COMPILE_WITH_CUDA option.")
+#endif()
 
-option(IRR_COMPILE_WITH_CUDA "Compile with CUDA interop?" OFF)
-if (IRR_COMPILE_WITH_CUDA)
-	enable_language(CUDA)
-endif()
+#option(IRR_COMPILE_WITH_CUDA "Compile with CUDA interop?" OFF)
+#if (IRR_COMPILE_WITH_CUDA)
+#	enable_language(CUDA)
+#endif()
 
 
 #
