create entry to amd fix

--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -104,6 +104,7 @@ set(IRRLICHT_SRCS_COMMON
 	
 # Builtin include loaders
 	${IRR_ROOT_PATH}/src/irr/asset/CGLSLScanBuiltinIncludeLoader.cpp
+	${IRR_ROOT_PATH}/src/irr/asset/CGLSLAMDFixBuiltinIncludeLoader.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/CGLSLSkinningBuiltinIncludeLoader.cpp
 	
 # Shaders
