got stuck on PTX compilation for OptiX

--- a/ext/OptiX/CMakeLists.txt
+++ b/ext/OptiX/CMakeLists.txt
@@ -10,6 +10,7 @@ set(IRR_EXT_OPTIX_SRC
 )
 
 set(IRR_EXT_OPTIX_EXTERNAL_INCLUDE
+	"${IRR_ROOT_PATH}/3rdparty"
 	"${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}"
 	"${OPTIX_INCLUDE_DIR}"
 )
