--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -322,3 +322,8 @@ if (IRR_BUILD_BULLET)
 
 	set(BULLET_INCLUDE_PATH ${BULLET_INCLUDE_PATH} PARENT_SCOPE)
 endif()
+
+
+if (IRR_COMPILE_WITH_CUDA)
+	update_git_submodule(./jitify)
+endif()
