--- a/include/irr/config/BuildConfigOptions.h.in
+++ b/include/irr/config/BuildConfigOptions.h.in
@@ -22,4 +22,7 @@
 // extra config
 #cmakedefine __IRR_FAST_MATH
 
+// TODO: This has to disapppear from the main header and go to the OptiX extension header + config
+#cmakedefine OPTIX_INCLUDE_DIR "@OPTIX_INCLUDE_DIR@"
+
 #endif //__IRR_BUILD_CONFIG_OPTIONS_H_INCLUDED__
