rename a file in irr::ext::OptiX

--- a/ext/OptiX/CMakeLists.txt
+++ b/ext/OptiX/CMakeLists.txt
@@ -6,11 +6,11 @@ set(IRR_EXT_OPTIX_H
 	IModule.h
 	IContext.h
 	IDenoiser.h
-	OptiXManager.h
+	Manager.h
 )
 
 set(IRR_EXT_OPTIX_SRC
-	OptiXManager.cpp
+	Manager.cpp
 	IContext.cpp
 )
 
