--- a/include/irr/config/BuildConfigOptions.h.in
+++ b/include/irr/config/BuildConfigOptions.h.in
@@ -18,6 +18,7 @@
 // compute interop
 #cmakedefine _IRR_COMPILE_WITH_OPENCL_
 #cmakedefine _IRR_COMPILE_WITH_CUDA_
+#cmakedefine _IRR_BUILD_OPTIX_
 
 // extra config
 #cmakedefine __IRR_FAST_MATH
