--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -52,6 +52,9 @@ endif()
 if (IRR_COMPILE_WITH_CUDA)
 	message(STATUS "Building with CUDA interop")
 	set(_IRR_COMPILE_WITH_CUDA_ ${IRR_COMPILE_WITH_CUDA})
+	if (IRR_BUILD_OPTIX)
+		set(_IRR_BUILD_OPTIX_ ${IRR_BUILD_OPTIX})
+	endif()
 endif()
 #set(_IRR_TARGET_ARCH_ARM_ ${IRR_TARGET_ARCH_ARM}) #uncomment in the future
 set(__IRR_FAST_MATH ${IRR_FAST_MATH})
