fix a conflict after merge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,11 @@ option(IRR_COMPILE_WITH_CUDA "Compile with CUDA interop?" OFF)
 # CUDA test
 include(CheckLanguage)
 check_language(CUDA)
-if(CMAKE_CUDA_COMPILER OR "${CMAKE_CUDA_COMPILER_VERSION}" VERSION_LESS 9.0)
+#if(NOT CMAKE_CUDA_COMPILER OR CMAKE_CUDA_COMPILER_VERSION VERSION_LESS "9.0")
+if(NOT CMAKE_CUDA_COMPILER)
 	if (IRR_COMPILE_WITH_CUDA)
-		message(WARNING "CUDA not found or version lower than 9.0 found, version 9.0+ needed for C++14 support.")
+		#message(WARNING "CUDA not found or version (${CMAKE_CUDA_COMPILER_VERSION}) lower than 9.0 found, version 9.0+ needed for C++14 support.")
+		message(WARNING "CUDA not found.")
 	endif()
 else()
 	if (IRR_COMPILE_WITH_CUDA)
